# scry

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  ENGINEERING.md  README.md  REQUIREMENTS.md  SECURITY.md  THIRD_PARTY_NOTICES.md  justfile  mull.yml
.agents/skills/scry-preflight/: SKILL.md
.agents/skills/scry-preflight/agents/: openai.yaml
.claude/: settings.json
.claude/agents/: register-auditor.md
.claude/hooks/: post-edit.sh
.claude/skills/adr/: SKILL.md  template.md
.claude/skills/register-conventions/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  nightly.yml
cmake/: CheckPublicHeaders.cmake  CheckReflectionPackage.cmake  ExpectCompileFailure.cmake  scryConfig.cmake.in
docs/: memory-management-evaluation.md
docs/adr/: 0001-build-system-cmake-presets-just.md  0001-public-object-graph-and-lifetimes.md  0002-build-and-dependency-foundation.md  0002-dependency-acquisition.md  0003-test-framework-catch2.md  0003-test-framework-deferred.md  0004-live-quality-ratchet.md  0004-reflection-toolchain-ci-strategy.md  0005-m1-runtime-and-test-foundation.md  0006-m2-agentic-tool-loop.md  0007-m3-reflection-contract.md  0008-m4-openai-compatible-contract.md  0009-m4-worker-tool-execution.md  0010-m5-showcase-contract.md  0011-absolute-quality-gates.md  0012-release-infrastructure-simplification.md
examples/: CMakeLists.txt  main_loop.cpp  reflection_tools.cpp
examples/imgui/: README.md  chat_panel.cpp  chat_panel.hpp
examples/npc/: README.md  main.cpp  world.cpp  world.hpp
include/scry/: config.hpp  conversation.hpp  error.hpp  events.hpp  harness.hpp  json.hpp  reflection.hpp  scry.hpp  tool_registry.hpp  turn.hpp  turn_id.hpp  unique_function.hpp  version.hpp
include/scry/detail/: reflection_codec.hpp  reflection_json.hpp  reflection_meta.hpp  reflection_registration.hpp  reflection_schema.hpp
scripts/: __init__.py  ci-local-model.sh  ci-local.sh  ci-nightly-fuzz.sh  ci-nightly-mutation.sh  ci-reflection.sh  ci-showcase.sh  preflight.sh  quality-gate.sh  quality_gate.py  quality_metrics.py  reflection-coverage.sh  reflection_coverage_gate.py  test_quality_gate.py  test_reflection_coverage_gate.py
scripts/quality_coverage_mapper/: CMakeLists.txt  main.cpp
spikes/: curl_sse.cpp  reflection_glaze.cpp
src/: version.cpp
src/core/: json_codec.cpp  json_codec.hpp  model.hpp  provider.hpp  retry.cpp  retry.hpp  transport.hpp
src/machine/: CMakeLists.txt  turn_machine.cpp  turn_machine.hpp
src/protocol/: CMakeLists.txt  sse.cpp  sse.hpp
src/provider/: CMakeLists.txt  anthropic.hpp  anthropic_content.cpp  anthropic_content.hpp  anthropic_error.hpp  anthropic_request.cpp  anthropic_response.cpp  anthropic_stream.cpp  openai.hpp  openai_content.cpp  openai_content.hpp  openai_request.cpp  openai_response.cpp  openai_stream.cpp  provider.cpp  wire_json.cpp  wire_json.hpp
src/reflection/: json_bridge.cpp
src/runtime/: config.cpp  config.hpp  conversation.cpp  conversation_impl.hpp  conversation_persistence.cpp  harness.cpp  messages.cpp  messages.hpp  pump.cpp  pump.hpp  pump_state.cpp  queue.cpp  queue.hpp  startup.hpp  state.cpp  state.hpp  test_access.hpp  tool_dispatch.cpp  tool_dispatch.hpp  tool_registry.cpp  tool_registry_impl.hpp  turn.cpp  turn_impl.hpp  worker.cpp  worker.hpp  worker_publish.cpp
src/transport/: CMakeLists.txt  curl_error.cpp  curl_error.hpp  curl_global.cpp  curl_global.hpp  curl_transport.cpp  curl_transport.hpp  transport_policy.cpp  transport_policy.hpp
tests/: CMakeLists.txt  public_api_contract.cpp  version_test.cpp
tests/core/: retry_tests.cpp
tests/fixtures/anthropic/: request.json  response.json  stream.sse
tests/fixtures/tls/: README.md  self-signed-cert.pem  self-signed-key.pem
tests/fuzz/corpus/anthropic/: content_delta.json  error.json  message_start.json  response.json  tool_delta.json
tests/fuzz/corpus/openai/: error.json  response.json  stream_chunk.json  tool_chunk.json
tests/fuzz/corpus/sse/: stream.sse
tests/integration/: CMakeLists.txt  conversation_persistence_tests.cpp  curl_harness_tests.cpp  harness_tests.cpp  openai_integration_tests.cpp  runtime_coverage_tests.cpp  runtime_edge_tests.cpp  tls_probe.cpp  tls_server_test.py  tool_loop_test_support.hpp  tool_loop_tests.cpp  worker_tool_edge_tests.cpp  worker_tool_loop_tests.cpp
tests/machine/: CMakeLists.txt  machine_test_support.hpp  tool_budget_tests.cpp  tool_loop_tests.cpp  turn_machine_tests.cpp
tests/nightly/: local_model_smoke.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/package_consumer_reflection/: CMakeLists.txt  main.cpp
tests/protocol/: CMakeLists.txt  sse_coverage_tests.cpp  sse_fuzz.cpp  sse_tests.cpp
tests/provider/: CMakeLists.txt  anthropic_fuzz.cpp  coverage_tests.cpp  openai_fuzz.cpp  openai_request_tests.cpp  openai_response_tests.cpp  openai_stream_tests.cpp  provider_tests.cpp  stream_tests.cpp  tool_boundary_tests.cpp  wire_json_coverage_tests.cpp
tests/reflection/: json_bridge_tests.cpp  reflection_tests.cpp
tests/reflection/compile_fail/: duplicate_description.cpp  raw_json_handler.cpp  unknown_description.cpp  unsupported_arguments.cpp  void_handler.cpp
tests/runtime/: config_tests.cpp  conversation_persistence_tests.cpp  pump_branch_tests.cpp  pump_regression_tests.cpp  queue_coverage_tests.cpp  runtime_coverage_tests.cpp  runtime_tests.cpp  tool_dispatch_test_support.hpp  tool_dispatch_tests.cpp  tool_pump_tests.cpp  tool_registry_tests.cpp
tests/showcase/: CMakeLists.txt  chat_panel_tests.cpp  imgui_headless_smoke.cpp  npc_dispatch_tests.cpp  npc_world_tests.cpp
tests/support/transport/: fake_transport.hpp  loopback_server.cpp  loopback_server.hpp
tests/transport/: CMakeLists.txt  curl_transport_tests.cpp  fake_transport_tests.cpp  transport_coverage_tests.cpp  transport_policy_tests.cpp
